--- a/index.html
+++ b/index.html
@@ -1,63 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mohammad Nazmul Islam</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-      padding: 0;
-    }
-    h1 {
-      color: #333;
-    }
-    h2 {
-      color: #666;
-    }
-    p {
-      color: #999;
-    }
-    ul {
-      list-style-type: none;
-      padding: 0;
-    }
-    li {
-      margin-bottom: 10px;
-    }
-  </style>
-</head>
-<body>
-  <h1>Mohammad Nazmul Islam</h1>
-  <h2>Software Developer & Healthcare Specialist</h2>
-  
-  <h2>Education</h2>
-  <ul>
-    <li>NVQ Level 2 (Healthcare Specialist) - Boots Healthcare, London (2023 - 2024)</li>
-    <li>BSc in Computer Science - University of Greenwich, London (2020 - 2023)</li>
-    <li>HSC (equivalent to A-Level) - Govt Science College, Bangladesh (2017 - 2019)</li>
-    <li>SSC (equivalent to O-level) - Ibn Tamiya School and College, Bangladesh (2015 - 2016)</li>
-  </ul>
-  
-  <h2>Skills</h2>
-  <ul>
-    <li>Programming Languages: Python, Kotlin, Java, R, DrRacket</li>
-    <li>Software Prototypes Design Tool: Axure RP10</li>
-    <li>Languages: English (Adept), Bengali (Native), Urdu (Fluent), Hindi (Fluent)</li>
-  </ul>
-  
-  <h2>Work Experience</h2>
-  <ul>
-    <li>IT Broadcast Administrator (Placement) - ion TV, Upton Park, London (Sep 2021 - Jan 2022)</li>
-    <li>Healthcare Specialist - Boots, Piccadilly Circus, London (Jan 2022 – Present)</li>
-  </ul>
-  
-  <h2>Projects</h2>
-  <ul>
-    <li>AI: A Comparison of Modelling Methods Sales Forecast Volatility</li>
-    <li>Library Management System (Kotlin and Java)</li>
-    <li>AI: Weather Prediction Using Decision Tree Classification</li>
-  </ul>
+<head> Learning HTML practically</head>
 </body>
 </html>
